--- a/app/views/admin/nav.html
+++ b/app/views/admin/nav.html
@@ -8,7 +8,7 @@
 					</b>
 				</i>
 				<span>
-					Dashboard
+					{{msg . "Dashboard"}}
 				</span>
 			</a>
 		</li>
@@ -26,7 +26,7 @@
 					</i>
 				</span>
 				<span>
-					User 
+					{{msg . "User"}} 
 				</span>
 			</a>
 			<!-- 导航列表 -->
@@ -34,14 +34,14 @@
 				<li>
 					<a href="/adminUser/index">
 						<span>
-							Users
+							{{msg . "Users"}}
 						</span>
 					</a>
 				</li>
 				<li>
 					<a href="/adminUser/add">
 						<span>
-							Add User
+							{{msg . "Add User"}}
 						</span>
 					</a>
 				</li>
@@ -55,7 +55,7 @@
 					</b>
 				</i>
 				<span>
-					Blog
+					{{msg . "blog"}}
 				</span>
 			</a>
 		</li>
@@ -72,42 +72,42 @@
 					</i>
 				</span>
 				<span>
-					Email
+					{{msg . "Email"}}
 				</span>
 			</a>
 			<ul class="nav lt">
 				<li>
 					<a href="/admin/t?t=email/set">
 						<span>
-							Configuration
+							{{msg . "EmailConfiguration"}}
 						</span>
 					</a>
 				</li>
 				<li>
 					<a href="/admin/t?t=email/template">
 						<span>
-							Template
+							{{msg . "EmailTemplate"}}
 						</span>
 					</a>
 				</li>
 				<li>
 					<a href="/admin/t?t=email/sendToUsers">
 						<span>
-							Send Email to Users
+							{{msg . "Send Email to Users"}}
 						</span>
 					</a>
 				</li>
 				<li>
 					<a href="/admin/t?t=email/send">
 						<span>
-							Send Email
+							{{msg . "Send Email"}}
 						</span>
 					</a>
 				</li>
 				<li>
 					<a href="/adminEmail/list">
 						<span>
-							Email Logs
+							{{msg . "Email Logs"}}
 						</span>
 					</a>
 				</li>
@@ -127,7 +127,7 @@
 					</i>
 				</span>
 				<span>
-					Configuration
+					{{msg . "Configuration"}}
 				</span>
 			</a>
 			<ul class="nav lt">
@@ -135,7 +135,7 @@
 				<li>
 					<a href="/admin/t?t=setting/site_url">
 						<span>
-							Site's URL
+							{{msg . "SiteURL"}}
 						</span>
 					</a>
 				</li>
@@ -143,7 +143,7 @@
 				<li>
 					<a href="/admin/t?t=setting/home_page">
 						<span>
-							Home Page
+							{{msg . "HomePage"}}
 						</span>
 					</a>
 				</li>
@@ -151,7 +151,7 @@
 				<li>
 					<a href="/admin/t?t=setting/demo">
 						<span>
-							Demo User
+							{{msg . "DemoUser"}}
 						</span>
 					</a>
 				</li>
@@ -159,7 +159,7 @@
 				<li>
 					<a href="/admin/t?t=setting/open_register">
 						<span>
-							Open Register
+							{{msg . "Open Register"}}
 						</span>
 					</a>
 				</li>
@@ -175,7 +175,7 @@
 				<li>
 					<a href="/admin/t?t=setting/upload">
 						<span>
-							Upload File Size Limit
+							{{msg . "Upload File Size Limit"}}
 						</span>
 					</a>
 				</li>
@@ -183,7 +183,7 @@
 				<li>
 					<a href="/admin/t?t=setting/export_pdf">
 						<span>
-							Export PDF
+							{{msg . "Export PDF"}}
 						</span>
 					</a>
 				</li>
@@ -205,21 +205,21 @@
 				</span>
 				
 				<span>
-					Data
+					{{msg . "Data"}}
 				</span>
 			</a>
 			<ul class="nav lt">
 				<li>
 					<a href="/admin/t?t=data/configuration">
 						<span>
-							Mongodb Tool Configuration
+							{{msg . "Mongodb Tool Configuration"}}
 						</span>
 					</a>
 				</li>
 				<li>
 					<a href="/adminData/index">
 						<span>
-							Backup & Restore
+							{{msg . "Backup & Restore"}}
 						</span>
 					</a>
 				</li>
