--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -1,5 +1,5 @@
 {{template "admin/top.html" .}}
-	<div class="m-b-md"> <h3 class="m-b-none">Dashboard</h3></div>
+	<div class="m-b-md"> <h3 class="m-b-none">{{msg . "Dashboard"}}</h3></div>
 	<section class="panel panel-default"> 
 		<div class="row m-l-none m-r-none bg-light lter"> 
 			<div class="col-sm-6 col-md-3 padder-v b-r b-light"> 
@@ -9,7 +9,7 @@
 				</span> 
 				<a class="clear" href="/adminUser/index"> 
 					<span class="h3 block m-t-xs"><strong>{{.countUser}}</strong></span> 
-					<small class="text-muted text-uc">Users</small> 
+					<small class="text-muted text-uc">{{msg . "User"}}</small> 
 				</a> 
 			</div> 
 			<div class="col-sm-6 col-md-3 padder-v b-r b-light lt"> 
@@ -19,7 +19,7 @@
 				</span> 
 				<a class="clear" href="javascript:;"> 
 					<span class="h3 block m-t-xs"><strong>{{.countNote}}</strong></span> 
-					<small class="text-muted text-uc">Notes</small> 
+					<small class="text-muted text-uc">{{msg . "note"}}</small> 
 				</a> 
 			</div>
 			<div class="col-sm-6 col-md-3 padder-v b-r b-light"> 
@@ -29,7 +29,7 @@
 				</span> 
 				<a class="clear" href="/adminBlog/index"> 
 					<span class="h3 block m-t-xs"><strong>{{.countBlog}}</strong></span> 
-					<small class="text-muted text-uc">Blogs</small> 
+					<small class="text-muted text-uc">{{msg . "blog"}}</small> 
 				</a> 
 			</div> 
 		</div>
@@ -38,7 +38,7 @@
 	<!-- 最新动态 -->
 	<section class="panel panel-default">
 		<h4 class="font-thin padder">
-			Leanote Events
+			{{msg . "leanoteEvents"}}
 		</h4>
 		<ul class="list-group" id="eventsList"></ul>
 	</section>
